CB-18020 adding non native aws support for vertical scaling